--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:icon="@drawable/multimodal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".SearchImage" />
-        <activity android:name=".Utils.PopUpScreen" />
-        <activity android:name=".IdentResultActivity"></activity>
-        
-
+        <activity android:name=".IdentResultActivity" />
     </application>
 
 </manifest>
