--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,9 @@ dependencies {
 
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.1'
 
+
+    compile 'com.android.support:design:23.2.1'
     compile 'com.github.markushi:circlebutton:1.1'
-
-
-
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.1.3'
     compile 'com.jakewharton:butterknife:6.1.0'
