--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".SearchImage" />
         <activity android:name=".IdentResultActivity" />
+        <activity android:name=".EnrollResultActivity"></activity>
     </application>
 
 </manifest>
