--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.1.3'
     compile 'com.jakewharton:butterknife:6.1.0'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 
