--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,20 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:icon="@drawable/multimodal">
+            android:icon="@drawable/multimodal"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchImage" />
-        <activity android:name=".IdentResultActivity" />
-        <activity android:name=".EnrollResultActivity"></activity>
+        <activity android:name=".SearchImage"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".IdentResultActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".EnrollResultActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
